--- a/src/sass/components/_component-documentation.scss
+++ b/src/sass/components/_component-documentation.scss
@@ -1,3 +1,68 @@
 * + .componentdocumentation {
 	@include AU-space( margin-top, 5unit );
 }
+
+.componentdocumentation {
+	
+	.au-display-xxxl, 
+	.au-display-xxl, 
+	.au-display-xl, 
+	.au-display-lg, 
+	.au-display-md, 
+	.au-display-sm, 
+	.au-display-xs, 
+	.au-body h1, 
+	.au-body h2, 
+	.au-body h3, 
+	.au-body h4, 
+	.au-body h5, 
+	.au-body h6 {
+		font-weight: 600;
+		max-width: 42rem;
+	}
+
+	.sm-basic-example {
+		border: 1px solid #5f5f5f;
+		background: #efefef;
+		padding: 1em 3em 1.5em;
+		max-width: 42rem;
+		box-sizing: border-box;
+
+		h4 {
+			margin-left: -1em;
+			margin-bottom: 1em;
+			font-weight: 600;
+			font-size: 1em;
+		}
+	}
+}
+
+.sm-basic-contributor {
+	position: relative;
+	display: inline-block;
+	border: 1px solid #5f5f5f;
+	background: #efefef;
+	padding: 1em 2em;
+	max-width: 42rem;
+	box-sizing: border-box;
+	min-height: 10em;
+
+	div > h4 {
+		margin-bottom: 1em;
+		font-weight: 600;
+		font-size: 1em;
+	}
+
+	.contributor-logo {
+		position: relative;
+
+		img {
+			position: absolute;
+			top: -3.5em;
+		}
+	}
+
+	.contributor-text {
+		padding-left: 3em;
+	}
+}
