--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -15,7 +15,7 @@
 
 // Remove padding bottom as we have a menu
 .au-header {
-	padding-bottom: 0;
+	padding-bottom: 1em;
 	position: relative;
 	z-index: 300;
 }
