--- a/src/sass/components/_sidebar.scss
+++ b/src/sass/components/_sidebar.scss
@@ -26,7 +26,7 @@
 			position: relative;
 
 			&:after {
-				background: $AU-color-background-alt;
+				// background: $AU-color-background-alt;
 				content: " ";
 				left: 0;
 				position: absolute;
@@ -48,7 +48,7 @@
 		.content {
 			@include AU-space( padding-left, 3unit );
 			background: $AU-color-background;
-			box-shadow: -1px 0 0 0 darken($AU-color-background-shade, 15%);
+			// box-shadow: -1px 0 0 0 darken($AU-color-background-shade, 15%);
 		}
 
 		.sidebar .navigation--accordion {
