2nd prototype init - accessibility pages

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -52,6 +52,7 @@
 @import 'components/section';
 @import 'components/searchpage';
 @import 'components/statistics';
+@import 'components/cards';
 @import 'hotfix';
 
 //Possible Visual Design Tweaks to UIKit
