accessibility landing page design and 'why' sub page added

--- a/src/sass/components/_abstract.scss
+++ b/src/sass/components/_abstract.scss
@@ -2,7 +2,7 @@
 // A visually larger block of text to introduce a page
 
 .abstract {
-	@include AU-fontgrid( lg );
+	@include AU-fontgrid( md );
 	@include AU-space( max-width, 40unit );
 	@include AU-space( margin-top, 1unit );
 }
