Modular right col sidebar added for consistent layout and improved responsive design

--- a/src/sass/components/_component-documentation.scss
+++ b/src/sass/components/_component-documentation.scss
@@ -160,6 +160,7 @@
 div.col-md-9.right-column__module--header {
 	height: 2em;
 	padding-left: 0;
+	margin-top: 5rem;
 
 	h4.right-column__module--h4 {
 		font-weight: 600;
