--- a/src/sass/components/_component-documentation.scss
+++ b/src/sass/components/_component-documentation.scss
@@ -26,16 +26,18 @@
 	}
 
 	.sm-basic-example {
-		border: 1px solid #5f5f5f;
-		background: #efefef;
+		border: 2px solid #808080;
+		background: #f5f5f5;
 		padding: 1em 3em 1.5em;
 		max-width: 42rem;
 		box-sizing: border-box;
 		line-height: 1.5em;
 
 		h4 {
-			margin-left: -1em;
-			margin-bottom: 1em;
+			background: #e0e0e0;
+			padding: 1em 3em 1em 1em;
+			width: calc(100% + 2em);
+			margin: -1em -3em 1em;
 			font-weight: 600;
 			font-size: 1em;
 		}
