--- a/src/sass/components/_component-documentation.scss
+++ b/src/sass/components/_component-documentation.scss
@@ -17,7 +17,7 @@
 	.au-display-xs, 
 	.au-body h1, 
 	.au-body h2, 
-	.au-body h3, 
+	.au-body h3,   
 	.au-body h4, 
 	.au-body h5, 
 	.au-body h6 {
@@ -27,17 +27,17 @@
 
 	.sm-basic-example {
 		border: 2px solid #808080;
-		background: #f5f5f5;
-		padding: 1em 3em 1.5em;
+		background: #fff;
+		padding: 1em 1em 1.5em 1em;
 		max-width: 42rem;
 		box-sizing: border-box;
 		line-height: 1.5em;
 
 		h4 {
 			background: #e0e0e0;
-			padding: 1em 3em 1em 1em;
-			width: calc(100% + 2em);
-			margin: -1em -3em 1em;
+			padding: 1em;
+			width: 100%;
+			margin: -1em 0 1em -1em;
 			font-weight: 600;
 			font-size: 1em;
 		}
@@ -57,7 +57,7 @@
 	div > h4 {
 		margin-bottom: 1em;
 		font-weight: 800;
-		font-size: 1em;
+		font-size: 0.875em;
 	}
 
 	div > p {}
@@ -95,7 +95,7 @@
 
 	&.more-resources {
 		color: #636363;
-		font-size: 1em;
+		font-size: 0.875em;
 
 		h4.right-column__module--h4 {
 			font-weight: 600;
@@ -106,7 +106,7 @@
 			padding: 0;
 
 			ul {
-				font-size: 1em;
+				font-size: 0.875em;
 				padding-left: 1.5em;
 			} 
 			
@@ -139,6 +139,7 @@
 
 		a {
 			color: #45C2F0;
+			font-size: 0.875em;
 		}
 
 		.right-column__module--header {
@@ -156,7 +157,8 @@
 	}
 }
 
-div.col-md-9.right-column__module--header {
+div.col-md-9.right-column__module--header,
+div.col-md-12.right-column__module--header {
 	height: 2em;
 	padding-left: 0;
 
@@ -184,6 +186,10 @@ div.col-md-12.right-column__module--body {
 
 	p {
 		font-size: 1em;
+	}
+
+	i img, h4 i img {
+		vertical-align: text-bottom;
 	}
 }
 
@@ -219,9 +225,10 @@ div.col-md-12.right-column__module--body {
 		margin-top: 3em;
 		height: 0;
 		padding: 0;
-		border-style: solid;
-		border-width: 1px;
-		border-image: linear-gradient(to right, #fff, #5f5f5f) 1;
+		// border-style: solid;
+		// border-width: 1px;
+		// border-image: linear-gradient(to right, #fff, #5f5f5f) 1;
+		border-top: 1px solid #e0e0e0;
 
 		&::after {
 			content: '';
@@ -229,8 +236,7 @@ div.col-md-12.right-column__module--body {
 			height: 5em;
 			border-style: solid;
 			border-width: 1px;
-			right: -1px;
-			border-image: linear-gradient(to top, #fff, #5f5f5f) 1;
+			border-image: linear-gradient(to top, #fff, #e0e0e0) 1;
 
 		}
 	}
