--- a/src/sass/components/_component-documentation.scss
+++ b/src/sass/components/_component-documentation.scss
@@ -124,6 +124,7 @@
 		background-color: #F5F5F5;
 		color: #636363;
 		padding: 1em;
+		margin-top: 4em;
 
 		.right-column__module--body {
 			border-top: none;
@@ -230,7 +231,7 @@ div.col-md-12.right-column__module--body {
 		// border-image: linear-gradient(to right, #fff, #5f5f5f) 1;
 		border-top: 1px solid #e0e0e0;
 
-		&::after {
+		&::before {
 			content: '';
 			position: absolute;
 			height: 5em;
@@ -248,24 +249,71 @@ div.col-md-12.right-column__module--body {
 		flex-direction: column;
 		align-items: flex-end;
 		justify-content: space-between;
+		z-index: 3;
 
 		span {
 			visibility: hidden;
-			bottom: -15px;
+			bottom: -10px;
 			position: relative;
 			font-size: 0.75em;
-			transition: all 0.25s ease-in-out;
+			transition: all 0.05s ease-in-out;
 			text-decoration: underline;
 		}
 
 		i {
+			position: relative;
+			top: 0;
+			right: 0;
 			padding: 0 1em;
+			z-index: 1;
+			transition: all 0.05s ease-in-out;
+		}
+
+		&::after {
+			content: '';
+			position: absolute;
+			right: -2px;
+			top: 31px;
+			height: 2.6em;
+			width: 2.6em;
+			background-color: #fff;
+			box-shadow: -3px 3px 3px #e0e0e0;
+			z-index: 0;
+			visibility: hidden;
+			transition: all 0.05s ease-in-out;
+		}
+
+		&::before {
+			content: '';
+			position: absolute;
+			right: -7px;
+			top: 51px;
+			height: 1px;
+			width: 56px;
+			background-color: #e0e0e0;
+			z-index: 1;
+			transition: all 0.05s ease-in-out;
+			transform: rotate(45deg);
+			visibility: hidden;
 		}
 
 		&:hover {
 			span {
 				visibility: visible;
-				bottom: -10px;
+				bottom: -7px;
+			}
+
+			&::after {
+				visibility: visible;
+			}
+
+			&::before {
+				visibility: visible;
+			}
+
+			i {
+				top: 9px;
+				right: 6px;
 			}
 		}
 	}
