--- a/src/sass/components/_component-documentation.scss
+++ b/src/sass/components/_component-documentation.scss
@@ -129,6 +129,10 @@
 		.right-column__module--body {
 			border-top: none;
 			padding: 0 0 1em;
+
+			p {
+				font-size: 0.875em;
+			}
 		}
 	}
 
@@ -149,7 +153,7 @@
 
 		.right-column__module--body {
 			border-top: none;
-			padding: 0 0 1em;
+			padding: 0 0 0.25em;
 
 			p {
 				font-size: 1em;
@@ -207,7 +211,7 @@ div.col-md-12.right-column__module--body {
 		cursor: pointer;
 		
 		p {
-			color: #000;
+			color: #5f5f5f;
 			text-decoration: underline;
 			margin-left: 5px;
 		}
@@ -215,7 +219,7 @@ div.col-md-12.right-column__module--body {
 }
 
 .componentdocumentation .col-md-6 + .col-md-3 {
-	margin-top: 5em;
+	margin-top: 5rem;
 }
 
 .header-link {
